--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "admin-lte": "^3.2.0",
-        "vue": "^3.4.18"
+        "@vitejs/plugin-vue": "^5.0.4",
+        "vue": "^3.4.19",
+        "vue-loader": "^17.3.1",
+        "vue-router": "^4.0.13"
     }
 }
